fixed speech buddle z-index on mobile

--- a/src/components/SesameStreetList/_sasameStreeList.scss
+++ b/src/components/SesameStreetList/_sasameStreeList.scss
@@ -132,7 +132,7 @@
             &:before {
                 content: "";
                 position: absolute;
-                z-index: 10;
+                z-index: 0;
                 border-style: solid;
                 background: transparent;
                 display: block;
@@ -142,7 +142,7 @@
             &:after {
                 content: "";
                 position: absolute;
-                z-index: 10;
+                z-index: 0;
                 border-style: solid;
                 background: transparent;
                 display: block;
